# k8s-ai-sre

./: .dockerignore  .envrc  AGENTS.md  Dockerfile  PLAN.md  README.md  TESTING.md  action_store.py  incident_store.py  investigate.py  logger.py  main.py  mkdocs.yml  model_factory.py  notifier.py  prompts.py  pyproject.toml  server.py  telegram_bot.py  test_pr_file.txt  tools.py
app/: __init__.py  actions.py  alert_ingestion.py  backpressure.py  cli.py  error_taxonomy.py  http.py  investigate.py  investigation_brief.py  log.py  metrics.py  notifier.py  prompts.py  startup.py  telegram.py  telegram_brief.py  telegram_text.py
chart/: Chart.yaml  values.yaml
deploy/: app.yaml  demo-namespace.yaml  k8s-ai-sre.yaml  kustomization.yaml  rbac.yaml
docs/: architecture.md  contributing.md  deployment.md  developer.md  grafana-dashboard.json  index.md  maintainers.md  plan.md  portkey.md  prometheus-alerts.md  quickstart.md  testing.md
examples/: alertmanager-bad-deploy.json  kind-bad-deploy.yaml
scripts/: baseline.sh  e2e_full_stack_kind.sh  e2e_kind.sh  e2e_reliability_kind.sh  smoke.sh
tests/: test_actions.py  test_auth_middleware.py  test_backpressure.py  test_ci_smoke_alert_approval_loop.py  test_ci_smoke_api_contract.py  test_ci_smoke_telegram_approval_protocol.py  test_http_integration.py  test_incidents.py  test_investigate.py  test_investigation_brief.py  test_k8s_tools.py  test_metrics.py  test_model_factory.py  test_notifier.py  test_restart_recovery.py  test_startup.py  test_store_abstraction.py  test_telegram_brief.py  test_telegram_commands.py  (+4 more)
(+34 files in other folders)
