[project]
name = "k8s-ai-sre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "groq>=1.1.2",
    "loguru>=0.7.2",
    "openai>=2.30.0",
    "openai-agents>=0.13.2",
    "portkey-ai>=2.2.0",
    "prometheus-client>=0.24.1",
    "uvicorn>=0.30.0",
]
